manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - name: nginx-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: crater
